# MSc_Thesis_Submission

./: .gitignore  ReadMe.md  environment.yaml  pyproject.toml
Amortized Toy example/: Plots_5_to_7.ipynb  ReadMe.md  config_1d_non_iterative.yaml  flows_non_iterative.py  generate_samples_non_iterative_new.py  model_non_iterative_new.py  requirements_pip.txt  train_non_iterative_new.py  utils_non_iterative_new.py
Toy example/: Plots_1_to_4.ipynb  ReadMe.md  TARIS.py  final_TARIS.ipynb
msc_thesis/: __init__.py
msc_thesis/amortized_toy_example/: Plots_5_to_7.ipynb  config_1d_non_iterative.yaml  estimators.py  generate_samples_non_iterative_new.py  path_utils.py  train_non_iterative_new.py  utils_non_iterative_new.py
msc_thesis/toy_example/: Plots_1_to_4.ipynb
